--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Park/Maps/Demo.Demo
+EditorStartupMap=/Game/CarnivalHorror/LVL_Main.LVL_Main
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Park/Maps/Demo.Demo
+GameDefaultMap=/Game/CarnivalHorror/LVL_Main.LVL_Main
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
